# info-projekt

./: Cargo.toml
Erklärende Dokumente/: Bedienungsanleitung.docx  Theorie.docx
src/: main.rs
